--- a/VirtualAddingMachine/VirtualAddingMachine/Client/wwwroot/css/app.css
+++ b/VirtualAddingMachine/VirtualAddingMachine/Client/wwwroot/css/app.css
@@ -37,6 +37,10 @@ h1:focus {
     content: "An error has occurred."
 }
 
+/*
+    set printing rules, 
+    basically hides all the elements, except textarea (a workaround solution!!)
+*/
 @media print {
     body * {
         visibility: hidden;
